Show a PDF page and highlight text
- Setup PDF.js, following the code from svelte-pdfjs
  (https://github.com/gtm-nayan/svelte-pdfjs/tree/main)
  and the PDF.js examples (https://mozilla.github.io/pdf.js/examples/)
- Load a PDF document and show the first page in a canvas
- Load the text layer, with the correct scaling factor and positioning
- Highlight text with a yellow background

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@nhost/nhost-js": "^2.2.15",
-		"graphql": "^16.8.0"
+		"graphql": "^16.8.0",
+		"pdfjs-dist": "^3.10.111"
 	}
 }
