--- a/backend/nhost/metadata/databases/default/tables/storage_files.yaml
+++ b/backend/nhost/metadata/databases/default/tables/storage_files.yaml
@@ -49,3 +49,34 @@ object_relationships:
   - name: bucket
     using:
       foreign_key_constraint_on: bucket_id
+select_permissions:
+  - role: public
+    permission:
+      columns:
+        - id
+        - created_at
+        - updated_at
+        - bucket_id
+        - name
+        - size
+        - mime_type
+        - etag
+        - is_uploaded
+        - uploaded_by_user_id
+      filter:
+        mime_type:
+          _eq: application/pdf
+  - role: user
+    permission:
+      columns:
+        - is_uploaded
+        - size
+        - bucket_id
+        - etag
+        - mime_type
+        - name
+        - created_at
+        - updated_at
+        - id
+        - uploaded_by_user_id
+      filter: {}
