Scroll to links and back
- Clicking on a link scrolls to the target point
- A button appears offering to scroll back to the original position
- Clicking on links adds the target to the URL hash
- Navigating to a URL with an hash scrolls to the target point

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@iconify/svelte": "^3.1.4",
 		"@nhost/nhost-js": "^2.2.15",
 		"graphql": "^16.8.0",
 		"pdfjs-dist": "^3.10.111"
